logged in as text vertical alignment correction

--- a/linkitup/static/css/commit.css
+++ b/linkitup/static/css/commit.css
@@ -51,7 +51,7 @@ border-left: 1px solid #e1e1e1;
 
 
 .loggedinas {
- line-height: 50px;
+ line-height: 45px;
  font-size:16px!important;
 padding-bottom: 0px!important;
 margin-right: 20px!important; 
